# dockerview

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-checks.yml
dockerview/: __init__.py  __main__.py  app.py  config.py
dockerview/docker_mgmt/: manager.py
dockerview/ui/: confirm_modal.py  containers.py  log_pane.py
tests/: __init__.py  test_config.py
